--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
 
 </head>
 
-
 <!-- Header work in proress -->
 <body>
-
-
     
-    <section class="main">
+    <header>
         <div class="container">
 
 
@@ -47,6 +44,7 @@
                         </ul>
                         <a class="navbar-brand img " href="#"><img src="images/logo.png" alt=""></a>
                         <ul>
+                            
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Blog</a>
                             <li class="nav-item">
@@ -61,7 +59,7 @@
             </nav>
 
         </div>
-    </section>
+    </header>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
