--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 
 </head>
 
+
 <!-- Header work in proress -->
+
 <body>
-    
+
     <header>
         <div class="container">
 
 
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
+
                 <div class="container-fluid">
 
                     <button class="navbar-toggler" type="button" aria-controls="navbarText" aria-expanded="false"
@@ -36,16 +39,23 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Gallery</a>
                             </li>
-
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Portfolio</a>
                             </li>
 
                         </ul>
-                        <a class="navbar-brand img " href="#"><img src="images/logo.png" alt=""></a>
+
                         <ul>
-                            
                             <li class="nav-item">
+                                <a class="navbar-brand img " href="#"><img src="images/logo.png" alt=""></a>
+                            </li>
+
+
+                        </ul>
+
+                        <ul>
+
+                            <li class="nav-item ">
                                 <a class="nav-link" href="#">Blog</a>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">About us</a>
@@ -54,20 +64,24 @@
 
                         </ul>
 
+
+
                     </div>
                 </div>
             </nav>
 
+
         </div>
+
     </header>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-    integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-    crossorigin="anonymous"></script>
+        integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+        crossorigin="anonymous"></script>
 
 </body>
 
